--- a/EECE 490 HW5.ipynb
+++ b/EECE 490 HW5.ipynb
@@ -18,11 +18,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "31e833c1-d815-4f40-b40d-d97238573fc1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>charges</th>\n",
+       "      <th>smoker</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>16884.9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>45</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1725.6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>4449.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50</td>\n",
+       "      <td>22.5</td>\n",
+       "      <td>21984.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>3866.9</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age   bmi  charges  smoker\n",
+       "0   25  18.5  16884.9       1\n",
+       "1   45  24.0   1725.6       0\n",
+       "2   35  28.0   4449.4       0\n",
+       "3   50  22.5  21984.5       1\n",
+       "4   23  30.1   3866.9       0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd\n",
+    "df=pd.read_excel('Dataset.xlsx')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a31156a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 4)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2e82324e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age        0\n",
+      "bmi        0\n",
+      "charges    0\n",
+      "smoker     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b387c82d",
+   "metadata": {},
+   "source": [
+    "we can see that there isn't any missing values \n",
+    "\n",
+    "**Normalization:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b91780dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             age        bmi    charges     smoker\n",
+      "count  10.000000  10.000000  10.000000  10.000000\n",
+      "mean    0.661667   0.809302   0.403748   0.400000\n",
+      "std     0.209209   0.139273   0.301531   0.516398\n",
+      "min     0.383333   0.614618   0.078492   0.000000\n",
+      "25%     0.525000   0.685216   0.182516   0.000000\n",
+      "50%     0.625000   0.813953   0.283268   0.000000\n",
+      "75%     0.812500   0.917774   0.550035   1.000000\n",
+      "max     1.000000   1.000000   1.000000   1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in df.columns:\n",
+    "    max_value= df[column].max()\n",
+    "    if max_value!=0:\n",
+    "      df[column]=df[column]/max_value\n",
+    "print(df.describe())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
